--- a/public/lessons-content/web-cookies.html
+++ b/public/lessons-content/web-cookies.html
@@ -80,7 +80,7 @@ Cookie: sessionid=u7xGz...</code></pre>
 
     <h3>Fixation de Session</h3>
     <p>
-        L'attaquant force le navigateur d'une victime à utiliser un identifiant de session qu'il connaît déjà, <strong>avant</strong> que la victime ne se connecte. Le serveur, vulnérable, ne génère pas de nouvel identifiant après la connexion, associant le compte de la victime à l'ID de l'attaquant.
+        L'attaquant force le navigateur d'une victime à utiliser un identifiant de session qu'il connaît déjà, avant que la victime ne se connecte. Le serveur, vulnérable, ne génère pas de nouvel identifiant après la connexion, associant le compte de la victime à l'ID de l'attaquant.
     </p>
 <pre><code># Flux d'une attaque par Fixation de Session
 
