--- a/public/challenges-content/forensics-integrity-key.html
+++ b/public/challenges-content/forensics-integrity-key.html
@@ -1,5 +1,5 @@
 <section class="content-block">
-    <h2><i class="fas fa-book"></i>Contexte de l'Investigation</h2>
+    <h2><i class="fas fa-book"></i>Contexte</h2>
     <p>
         Le départ récent de l'ingénieur R&D, Hugo, a déclenché une procédure de sécurité interne. Cette procédure est d'autant plus critique que l'ingénieur avait accès à des brevets et des données de recherche confidentielles sur des projets à venir. Des activités réseau inhabituelles, détectées sur son poste de travail juste avant l'annonce de sa démission, laissent suspecter une tentative d'exfiltration de données.
     </p>
