--- a/public/challenges-content/forensics-integrity-key.html
+++ b/public/challenges-content/forensics-integrity-key.html
@@ -22,8 +22,8 @@
         </div>
         <div class="file-item">
             <div class="file-info">
-                <h4>integrite.txt</h4>
-                <p>Fichier contenant la valeur de hachage SHA-256 de l'image disque de référence.</p>
+                <h4>6dc32c239f1a89bc371185ef1b9f306051674b973f80d544975c7c81973ec15a</h4>
+                <p>La valeur de hachage SHA-256 de l'image disque de référence.</p>
             </div>
             <a href="/ressources-challenges/forensics-integrity-key/integrite.txt" download class="btn-glass"><i class="fas fa-download"></i> Télécharger</a>
         </div>
