--- a/public/challenges-content/crypto-forgotten-hash.html
+++ b/public/challenges-content/crypto-forgotten-hash.html
@@ -1,7 +1,7 @@
 <section class="content-block">
     <h2><i class="fas fa-book"></i>Contexte</h2>
     <p>
-        Un audit de sécurité de routine chez "Kolo-Corp" a mis en lumière une anomalie troublante. Un fichier d'archive, nommé <code>projets_R&D.zip</code>, a été découvert sur un serveur de partage interne accessible par plusieurs équipes. Ce qui a attiré l'attention des auditeurs, c'est que les métadonnées du fichier journal indiquent que le mot de passe de l'archive a été stocké sous forme de hash dans un ancien script de sauvegarde, aujourd'hui obsolète.
+        Un audit de sécurité de routine a mis en lumière une anomalie troublante. Un fichier d'archive, nommé <code>projets_R&D.zip</code>, a été découvert sur un serveur de partage interne accessible par plusieurs équipes. Ce qui a attiré l'attention des auditeurs, c'est que les métadonnées du fichier journal indiquent que le mot de passe de l'archive a été stocké sous forme de hash dans un ancien script de sauvegarde, aujourd'hui obsolète.
     </p>
     <p>
         Les premières investigations suggèrent que ce script utilisait un algorithme de hachage ancien et non sécurisé. Votre prédécesseur avait noté que de nombreux systèmes historiques de l'entreprise utilisaient MD5 par défaut. Vous êtes chargé d'analyser ce hash pour retrouver le mot de passe de l'archive. La direction craint que des données sensibles soient exposées si ce mot de passe est faible et facilement devinable.
