--- a/public/challenges-content/osint-test.html
+++ b/public/challenges-content/osint-test.html
@@ -1,63 +1,90 @@
 <section class="content-block">
-    <h2><i class="fas fa-book"></i>Contexte</h2>
-    <p>
-        <strong>AeroCorp Dynamics</strong>, un leader de la robotique de défense, a subi une fuite critique de données concernant son nouveau projet de drone autonome, nom de code "<strong>Project Chimera</strong>". Un fichier audio a été envoyé anonymement à plusieurs journalistes spécialisés. L'auteur de la fuite, qui se fait appeler "Viper", semble être un employé ou un ex-employé.
-    </p>
-    <p>
-        Votre mission est de remonter la piste numérique laissée par "Viper" pour découvrir son identité et trouver un "flag" qu'il a caché pour prouver son forfait.
-    </p>
-</section>
-<section class="content-block">
-    <h2><i class="fas fa-download"></i>Artefacts Numériques Fournis</h2>
-    <p>
-        Nos équipes ont intercepté deux pièces à conviction.
-    </p>
-    <div class="challenge-files">
-        <div class="file-item">
-            <div class="file-info">
-                <h4>DOC-01_leak.mp3</h4>
-                <p>Le fichier audio envoyé aux journalistes. Une analyse multi-spectrale est recommandée.</p>
-            </div>
-            <a href="/ressources-challenges/osint-viper/DOC-01_leak.mp3" download class="btn-glass"><i class="fas fa-download"></i> Télécharger (Lien Fictif)</a>
-        </div>
-        <div class="file-item">
-            <div class="file-info">
-                <h4>DOC-02_Memo_Securite.txt</h4>
-                <p>Note de service interne du département de la sécurité d'AeroCorp.</p>
-                <hr class="email-divider">
-                <div class="email-content monospace-block">
-                    <p><strong>À:</strong> Tous les départements<br>
-                        <strong>DE:</strong> Direction de la Sécurité<br>
-                        <strong>SUJET:</strong> Rappel de la politique de sécurité suite à l'incident "Chimera"<br><br>
-                        Suite à la fuite d'informations, nous avons identifié un mode opératoire pointant vers un initié. Le suspect, se nommant "Viper", possède une connaissance approfondie de nos anciens systèmes de navigation, notamment le framework "Legacy-Nav-System". L'enquête se concentre sur les ingénieurs ayant eu un accès de niveau 3 à ce framework au cours des 24 derniers mois. Toute information pertinente doit être remontée immédiatement.
-                    </p>
+        <h2><i class="fas fa-book"></i>Contexte</h2>
+        <p>
+            Une développeuse anonyme, connue uniquement sous le pseudonyme de "Kaelis", a récemment mis en lumière une faille de sécurité majeure dans un logiciel gouvernemental. Après avoir publié ses découvertes de manière responsable, elle a effacé toute trace de son passage, ne laissant derrière elle qu'un unique message énigmatique sur un forum spécialisé avant de disparaître.
+        </p>
+        <p>
+            Votre mission, en tant qu'enquêteur OSINT, est de remonter sa piste numérique pour découvrir le nom de code du projet personnel sur lequel elle travaillait avant de s'évanouir dans la nature. Ce projet est suspecté d'être la véritable raison de sa disparition.
+        </p>
+    </section>
+
+    <section class="content-block">
+        <h2><i class="fas fa-download"></i>Unique Artefact : Le Dernier Message</h2>
+        <div class="challenge-files">
+            <div class="file-item">
+                <div class="file-info">
+                    <h4>Message de "Kaelis" (transcription)</h4>
+                    <hr class="email-divider">
+                    <div class="email-content">
+                        <p class="email-text text-quote">
+                            "Mon dernier commit public sur la plateforme du félin octogonal scelle mon départ. Cherchez mon alias, 'kaelis_7', là où le code se forge. La photo prise depuis mon balcon de vigie, face au Lion de Belfort, était mon seul indice visuel. Le projet 'Opale' n'était que la partie visible de l'iceberg. Si vous êtes assez curieux, vous trouverez le vrai nom du projet qui m'a consumé."
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<section class="content-block">
-    <h2><i class="fas fa-bullseye"></i>Objectif et Procédure</h2>
-    <p>Votre enquête se déroulera en plusieurs étapes. Chaque indice est la clé du suivant.</p>
-    <ul>
-        <li>
-            <strong>Étape 1 : Analyse Audio</strong><br>
-            Analysez le fichier <code>DOC-01_leak.mp3</code>. Ne vous contentez pas d'écouter le message à la voix modifiée. Des informations cruciales sont dissimulées dans le fichier lui-même. Cherchez un pseudonyme. Le bruit de fond pourrait également être une piste de géolocalisation.
-        </li>
-        <li>
-            <strong>Étape 2 : Le Dépôt de Code</strong><br>
-            Le pseudonyme découvert vous mènera vers une plateforme de développement collaborative bien connue. En recoupant avec la note de service (<code>DOC-02</code>), identifiez le projet pertinent sur le profil de ce suspect.
-        </li>
-        <li>
-            <strong>Étape 3 : Pivoter vers l'Identité Réelle</strong><br>
-            Le message audio de Viper contient un indice sur la manière de le démasquer : <i>"Pour trouver le serpent, suivez ceux qui admirent les anciennes étoiles."</i>. Utilisez cette information sur le dépôt de code pour pivoter vers un nouveau profil, celui de la véritable identité de Viper.
-        </li>
-        <li>
-            <strong>Étape 4 : La Preuve Finale</strong><br>
-            Explorez la présence en ligne (blog personnel, portfolio...) de cette personne. Le drapeau final est caché à la vue de tous, mais pas de la manière la plus évidente. Pensez à inspecter au-delà de ce que le navigateur affiche directement.
-        </li>
-    </ul>
-    <p>
-        <strong>Flag :</strong> Le flag est une chaîne de caractères spécifique laissée par Viper sur l'une de ses pages web publiques, au format <code>Flag{chaîne_de_caractères_unique}</code>.
-    </p>
-</section>
+    </section>
+
+    <section class="content-block">
+        <h2><i class="fas fa-bullseye"></i>Objectif et Procédure</h2>
+        <p>Votre objectif est de découvrir le nom de code du projet secret de Kaelis. Contrairement aux challenges précédents, toutes les informations ne vous sont pas fournies. Vous devrez activement chercher les indices sur internet.</p>
+        <ul>
+            <li><strong>Décrypter le point de départ :</strong> Analysez le message pour identifier la plateforme web, le pseudonyme à chercher et le lieu géographique clé.</li>
+            <li><strong>Pister l'alias :</strong> Retrouvez le profil de "Kaelis" sur la plateforme identifiée. Une analyse minutieuse de son profil, de ses projets (repositories) et de son activité est nécessaire. Le message mentionne un <strong>"dernier commit public"</strong> comme étant la clé.</li>
+            <li><strong>Analyse d'Artefact Numérique :</strong> Le dernier commit pourrait contenir un indice caché. Il est possible que des informations aient été intentionnellement laissées (ou retirées) dans les fichiers. Pensez à l'analyse de <strong>métadonnées</strong> (EXIF pour les images, par exemple) et à l'historique des modifications.</li>
+            <li><strong>Pivoter vers une nouvelle source :</strong> L'indice que vous trouverez vous mènera probablement vers une autre plateforme, plus professionnelle, où son identité réelle pourrait être révélée.</li>
+            <li><strong>Synthétiser les informations :</strong> Une fois sur son profil professionnel, explorez-le en détail en gardant en tête les indices précédents pour localiser la section contenant le nom de code du projet.</li>
+        </ul>
+        <p>
+            <strong>Flag :</strong> Pour valider ce challenge, le flag à soumettre est le nom de code exact du projet que vous avez découvert.
+        </p>
+    </section>
+
+    <section class="content-block">
+        <h2><i class="fas fa-key"></i>Solution Détaillée</h2>
+        <details>
+            <summary>Cliquez pour révéler la solution</summary>
+            <ol>
+                <li>
+                    <strong>Étape 1 : Décryptage du message initial</strong>
+                    <ul>
+                        <li>"La plateforme du félin octogonal" est une référence directe à <strong>GitHub</strong> et son logo, l'Octocat.</li>
+                        <li>L'alias à chercher est <code>kaelis_7</code>.</li>
+                        <li>Le lieu clé est <strong>Belfort</strong>, identifié par la mention de la célèbre statue du "Lion de Belfort".</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Étape 2 : Enquête sur GitHub</strong>
+                    <ul>
+                        <li>En cherchant <code>kaelis_7</code> sur GitHub, on trouve un profil. Le nom affiché sur le profil est <strong>Elara Vasseur</strong>. La photo de profil correspond à la description : une vue du Lion de Belfort depuis un appartement en hauteur.</li>
+                        <li>Parmi ses dépôts (repositories), l'un d'eux, nommé <code>dotfiles</code>, a un commit très récent. Le message du dernier commit est : "Nettoyage de printemps. Suppression des métadonnées avant l'archivage."</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Étape 3 : Analyse de l'historique du commit et des métadonnées</strong>
+                    <ul>
+                        <li>Ce message de commit est un indice majeur. Il suggère que la version <em>précédente</em> d'un fichier contenait des métadonnées importantes.</li>
+                        <li>En regardant l'historique de ce commit, on voit que le fichier modifié est l'avatar de l'utilisateur (par exemple, <code>avatar.jpg</code>).</li>
+                        <li>Il faut donc télécharger la version du fichier <em>avant</em> ce dernier commit.</li>
+                        <li>En utilisant un outil d'analyse de métadonnées EXIF, on inspecte cette ancienne version de l'image. Dans le champ "Commentaires", on trouve une nouvelle piste : <code>Coord: 47.6391° N, 6.8636° E. Le vrai projet est dans le pro. Linkedin, section bénévolat.</code></li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Étape 4 : Pivot vers LinkedIn</strong>
+                    <ul>
+                        <li>L'indice nous dirige vers <strong>LinkedIn</strong> et nous donne son vrai nom, trouvé sur GitHub : <strong>Elara Vasseur</strong>.</li>
+                        <li>Une recherche sur LinkedIn pour "Elara Vasseur", potentiellement en ajoutant "Belfort" ou "Développeuse", permet de trouver son profil professionnel.</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Étape 5 : Découverte du Flag</strong>
+                    <ul>
+                        <li>L'indice EXIF précisait de regarder la section <strong>"Bénévolat"</strong> (Volunteering) de son profil.</li>
+                        <li>Dans cette section, on trouve une entrée décrivant sa contribution à un projet de cyber-défense citoyenne. Le nom de code est mentionné ici.</li>
+                    </ul>
+                </li>
+            </ol>
+            <hr>
+            <p><strong>FLAG :</strong> <code>PROJET_ARGUS</code></p>
+        </details>
+    </section>
