--- a/public/challenges-content/osint-coworker-in-need.html
+++ b/public/challenges-content/osint-coworker-in-need.html
@@ -16,10 +16,10 @@
     <div class="challenge-files">
         <div class="file-item">
             <div class="file-info">
-                <h4>photo.jpg</h4>
+                <h4>IMG_20252902.jpg</h4>
                 <p>Image que votre collègue vous a envoyée</p>
             </div>
-            <a href="/ressources-challenges/forensics-integrity-key/cle_usb_hugo.vhd" download class="btn-glass"><i class="fas fa-download"></i> Télécharger</a>
+            <a href="/ressources-challenges/osint-coworker-in-need/IMG_20252902.jpg" download class="btn-glass"><i class="fas fa-download"></i> Télécharger</a>
         </div>
     </div>
 </section>
