--- a/public/challenges-content/stegano-deep-hammer.html
+++ b/public/challenges-content/stegano-deep-hammer.html
@@ -15,19 +15,16 @@
     <div class="challenge-files">
         <div class="file-item">
             <div class="file-info">
-                <h4>Abysses.jpg</h4>
-                <p>L'œuvre de l'artiste "Phantasma" à expertiser.</p>
+                <h4>Abysses.png</h4>
+                <p>L'œuvre de l'artiste "Photopea" à expertiser.</p>
             </div>
-            <a href="../ressources-challenges/stegano-hidden-art/hammerhead-shark.png" download class="btn-glass"><i class="fas fa-download"></i> Télécharger</a>
+            <a href="/ressources-challenges/stegano-deep-hammer/Abysses.png" download class="btn-glass"><i class="fas fa-download"></i> Télécharger</a>
         </div>
         <div class="file-item">
             <div class="file-info">
-                <h4 id="text-to-copy">"Ce qui se cache dans l'ombre ne demande qu'un peu de lumière pour se révéler."</h4>
+                <h4 id="text-to-copy">Ce qui se cache dans l'ombre ne demande qu'un peu de lumière pour se révéler.</h4>
                 <p>Une note cryptique laissée par un admirateur de Photopea</p>
             </div>
-            <button id="copy-button" class="btn-glass">
-                <i class="fas fa-copy"></i> Copier
-            </button>
         </div>
     </div>
 </section>
