--- a/public/challenges-content/crypto-forgotten-hash.html
+++ b/public/challenges-content/crypto-forgotten-hash.html
@@ -34,7 +34,10 @@
         <li>Utilisez un outil en ligne (comme CrackStation, md5decrypt, etc.) ou un logiciel spécialisé pour trouver la chaîne de caractères originale correspondant à ce hash.</li>
         <li>La faiblesse des anciens algorithmes de hachage comme MD5 réside dans leur vulnérabilité face aux attaques par dictionnaire et par tables arc-en-ciel (rainbow tables).</li>
     </ul>
-     <p>
+    <p>
         <strong>Flag :</strong> Pour valider ce challenge, le flag à soumettre est le mot de passe en clair que vous avez découvert.
+    </p>
+    <p>
+        Challenge créé par Hugo Bruchon.
     </p>
 </section>
