--- a/public/challenges-content/crypto-kolo-puzzle.html
+++ b/public/challenges-content/crypto-kolo-puzzle.html
@@ -36,4 +36,7 @@
      <p>
         <strong>Flag :</strong> Pour valider ce challenge, le flag à soumettre est le message déchiffré.
     </p>
+    <p>
+        Challenge créé par Hugo Bruchon.
+    </p>
 </section>
