--- a/public/challenges-content/forensics-integrity-key.html
+++ b/public/challenges-content/forensics-integrity-key.html
@@ -42,4 +42,7 @@
     <p>
         <strong>Flag :</strong> Pour valider ce challenge, le flag à soumettre est l'empreinte SHA-256 que vous avez calculée pour le fichier cle_usb_hugo.vhd. Le format attendu est la chaîne de 64 caractères hexadécimaux.
     </p>
+    <p>
+        Challenge créé par Hugo Bruchon.
+    </p>
 </section>
