--- a/public/challenges-content/osint-coworker-in-need.html
+++ b/public/challenges-content/osint-coworker-in-need.html
@@ -35,4 +35,7 @@
     <p>
         <strong>Flag :</strong> Pour valider ce challenge, le flag à soumettre correspond au nom de la ville. Le format attendu est le nom de la ville avec des "-" au lieu des espaces (Exemple : <code>Portes-lès-Valence</code>).
     </p>
+    <p>
+        Challenge créé par Hugo Bruchon.
+    </p>
 </section>
