--- a/public/challenges-content/stegano-deep-hammer.html
+++ b/public/challenges-content/stegano-deep-hammer.html
@@ -34,4 +34,7 @@
     <p>
         <strong>Flag :</strong> Pour valider ce challenge, le flag à soumettre est le message que vous découvrirez dans l'image, en respectant son format exact.
     </p>
+    <p>
+        Challenge créé par Robbie Berlioz.
+    </p>
 </section>
