--- a/public/challenges-content/crypto-kolo-puzzle.html
+++ b/public/challenges-content/crypto-kolo-puzzle.html
@@ -1,10 +1,10 @@
 <section class="content-block">
     <h2><i class="fas fa-book"></i>Contexte</h2>
     <p>
-        Vous êtes analyste en cybersécurité pour la société "Kolo-Corp", leader dans le secteur de la défense. Depuis plusieurs semaines, une cellule de renseignement interne suspecte la présence d'un groupe d'espions industriels, surnommé le "Krhaken", tentant de dérober des schémas de conception critiques. Des communications discrètes ont été repérées sur des canaux inhabituels.
+        Vous êtes analyste en cybersécurité pour la société "Kolo-Corp", leader dans le secteur de la défense. Depuis plusieurs semaines, une cellule de renseignement interne suspecte la présence d'un groupe d'espions industriels, surnommé le "Kr[HACK]en", tentant de dérober des schémas de conception critiques. Des communications discrètes ont été repérées sur des canaux inhabituels.
     </p>
     <p>
-        Un message particulièrement suspect vient d'être intercepté. Il est court, inintelligible, et tout porte à croire qu'il a été chiffré pour ne pas être compris par une simple lecture. Votre mission est de déchiffrer ce message pour anticiper la prochaine action du "Krhaken" et évaluer l'imminence de la menace.
+        Un message particulièrement suspect vient d'être intercepté. Il est court, inintelligible, et tout porte à croire qu'il a été chiffré pour ne pas être compris par une simple lecture. Votre mission est de déchiffrer ce message pour anticiper la prochaine action du "Kr[HACK]en" et évaluer l'imminence de la menace.
     </p>
 </section>
 
