--- a/public/challenges-content/osint-source.html
+++ b/public/challenges-content/osint-source.html
@@ -30,6 +30,6 @@
         <strong>Flag :</strong> Pour valider ce challenge, le flag à soumettre est la signature que vous trouverez, en respectant son format exact.
     </p>
     <p>
-        Challenge créé par Robbie Berlioz.
+        Challenge créé par Robbie.
     </p>
 </section>
