--- a/public/ressources-challenges/web-aurasound/index.html
+++ b/public/ressources-challenges/web-aurasound/index.html
@@ -46,7 +46,7 @@
                     </a>
                 </div>
                 <div class="md:w-1/2 flex justify-center">
-                    <img src="./bose-headphone.jpg" alt="Casque audio AuraSound Pro" class="w-3/4 md:w-full max-w-md rounded-lg shadow-2xl shadow-cyan-500/20">
+                    <img src="./bose-headphone.webp" alt="Casque audio AuraSound Pro" class="w-3/4 md:w-full max-w-md rounded-lg shadow-2xl shadow-cyan-500/20">
                 </div>
             </div>
         </section>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                     <div class="bg-gray-900 rounded-lg overflow-hidden shadow-lg hover:shadow-cyan-500/30 transition-shadow duration-300 transform hover:-translate-y-2">
-                        <img src="./akg-headphone.jpg" alt="Casque Aura One" class="w-full h-64 object-cover">
+                        <img src="./akg-headphone.webp" alt="Casque Aura One" class="w-full h-64 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">AuraSound One</h3>
                             <p class="text-gray-400 mb-4">L'équilibre parfait entre confort et performance audio. Idéal pour une utilisation quotidienne.</p>
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                     <div class="bg-gray-900 rounded-lg overflow-hidden shadow-lg hover:shadow-cyan-500/30 transition-shadow duration-300 transform hover:-translate-y-2">
-                        <img src="./nothing-headphone.jpg" alt="Casque Aura Studio" class="w-full h-64 object-cover">
+                        <img src="./nothing-headphone.webp" alt="Casque Aura Studio" class="w-full h-64 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">AuraSound Studio</h3>
                             <p class="text-gray-400 mb-4">Une clarté sonore de niveau professionnel pour le mixage et la production musicale.</p>
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <div class="bg-gray-900 rounded-lg overflow-hidden shadow-lg hover:shadow-cyan-500/30 transition-shadow duration-300 transform hover:-translate-y-2">
-                        <img src="./sony-headphhone.jpg" alt="Casque Aura Air" class="w-full h-64 object-cover">
+                        <img src="./sony-headphhone.webp" alt="Casque Aura Air" class="w-full h-64 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2">AuraSound Air</h3>
                             <p class="text-gray-400 mb-4">Légers, sans fil et avec une autonomie record. Votre musique vous suit partout.</p>
