le grand remplacement

--- a/public/challenges-content/crypto-fermat-factorization.html
+++ b/public/challenges-content/crypto-fermat-factorization.html
@@ -50,8 +50,7 @@
         <p>
             Pour valider ce challenge, le flag à soumettre est le message déchiffré en clair.
         </p>
+        <p>
+            Challenge créé par Tristan
+        </p>
     </section>
-    
-    <div class="credits">
-        <p>Challenge créé par Tristan B</p>
-    </div>
