--- a/public/challenges-content/intro-first-steps.html
+++ b/public/challenges-content/intro-first-steps.html
@@ -46,8 +46,7 @@
             Rejoignez le serveur via ce lien sécurisé : <a href="https://discord.gg/MSct2UaWvw" target="_blank">https://discord.gg/MSct2UaWvw</a>
         </p>
     </div>
+    <p>
+        Challenge créé par Robbie.
+    </p>
 </section>
-
-<div class="credits">
-    <p>Plateforme de challenges créée pour la communauté.</p>
-</div>
