--- a/public/challenges-content/osint-old-video.html
+++ b/public/challenges-content/osint-old-video.html
@@ -21,8 +21,7 @@
     <p>
         Pour valider ce challenge, le flag à soumettre est le message secret que vous trouverez dans la description de la vidéo.
     </p>
+    <p>
+        Challenge créé par Robbie.
+    </p>
 </section>
-    
-<div class="credits">
-    <p>Challenge créé par Robbie B.</p>
-</div>
