--- a/public/challenges-content/stegano-nothing.html
+++ b/public/challenges-content/stegano-nothing.html
@@ -40,8 +40,7 @@
     <p>
         Pour valider ce challenge, le flag à soumettre est la marque de l'appareil photo (par exemple : Google, Samsung, Apple...).
     </p>
+    <p>
+        Challenge créé par Robbie.
+    </p>
 </section>
-    
-<div class="credits">
-    <p>Challenge créé par Robbie B.</p>
-</div>
