--- a/public/challenges-content/web-aurasound.html
+++ b/public/challenges-content/web-aurasound.html
@@ -35,4 +35,7 @@
     <p>
         Pour valider ce challenge, le flag à soumettre est celui affiché après une connexion réussie au panneau d'administration.
     </p>
+    <p>
+        Challenge créé par Robbie.
+    </p>
 </section>
