--- a/public/challenges-content/web-kamilo.html
+++ b/public/challenges-content/web-kamilo.html
@@ -35,4 +35,7 @@
     <p>
         Pour valider ce challenge, le flag à soumettre est celui qui est affiché dans la fenêtre d'alerte après une connexion réussie.
     </p>
+    <p>
+        Challenge créé par Robbie.
+    </p>
 </section>
