--- a/public/challenges-content/web-konami.html
+++ b/public/challenges-content/web-konami.html
@@ -35,4 +35,7 @@
     <p>
         Pour valider ce challenge, le flag à soumettre est celui qui est affiché dans la console du navigateur après avoir entré la séquence correcte.
     </p>
+    <p>
+        Challenge créé par Robbie.
+    </p>
 </section>
