--- a/public/challenges-content/web-shades-of-buttons.html
+++ b/public/challenges-content/web-shades-of-buttons.html
@@ -35,4 +35,7 @@
     <p>
         Pour valider ce challenge, le flag à soumettre est celui qui apparaît dans la console du navigateur après avoir cliqué sur le bon bouton.
     </p>
+    <p>
+        Challenge créé par Robbie.
+    </p>
 </section>
