--- a/public/challenges-content/crypto-short-cipher.html
+++ b/public/challenges-content/crypto-short-cipher.html
@@ -47,4 +47,7 @@
     <p>
         Pour valider ce challenge, le flag à soumettre est le message déchiffré en clair.
     </p>
+    <p>
+        Challenge créé par Tristan
+    </p>
 </section>
