--- a/public/challenges-content/osint-allo-poulpy.html
+++ b/public/challenges-content/osint-allo-poulpy.html
@@ -28,8 +28,7 @@
     <p>
         Pour valider ce challenge, le flag à soumettre est le numéro de téléphone de l'école (sans espaces).
     </p>
+    <p>
+        Challenge créé par Robbie.
+    </p>
 </section>
-    
-<div class="credits">
-    <p>Challenge créé par Robbie B.</p>
-</div>
