--- a/public/challenges-content/web-cookies.html
+++ b/public/challenges-content/web-cookies.html
@@ -33,4 +33,7 @@
     <p>
         Pour valider ce challenge, le flag à soumettre est le message affiché sur la page, ou dans la console de développement, une fois l'accès accordé.
     </p>
+    <p>
+        Challenge créé par Robbie.
+    </p>
 </section>
