--- a/public/challenges-content/stegano-nothing.html
+++ b/public/challenges-content/stegano-nothing.html
@@ -13,7 +13,7 @@
     <div class="challenge-files">
         <div class="file-item">
             <div class="file-info">
-                <img src="campfire.jpg" alt="Image d'un feu de camp" style="max-width: 200px; border-radius: 8px; margin-bottom: 10px;">
+                <img src="/ressources-challenges/stegano-campfire/campfire.jpg" alt="Image d'un feu de camp" style="max-width: 200px; border-radius: 8px; margin-bottom: 10px;">
                 <p>Image de surveillance (campfire.jpg)</p>
             </div>
             <a href="/ressources-challenges/stegano-campfire/campfire.jpg" download class="btn-glass">
@@ -35,12 +35,6 @@
     </div>
 </section>
     
-<section class="content-block">
-    <h2><i class="fas fa-flag"></i>Flag</h2>
-    <p>
-        Pour valider ce challenge, le flag à soumettre est la marque de l'appareil photo (par exemple : Google, Samsung, Apple...).
-    </p>
-    <p>
-        Challenge créé par Robbie.
-    </p>
-</section>
+<p>
+    Challenge créé par Robbie.
+</p>
